--- a/.specgraph/features/feat_requirement_collector.yaml
+++ b/.specgraph/features/feat_requirement_collector.yaml
@@ -37,20 +37,18 @@ workflow:
       - "1.4 向用户确认理解是否正确"
     confirmation_required: true
     context_loaded:
-      - "product.yaml (vision, description)"
+      - "product.yaml (完整文件: vision, description, domains)"
 
   - phase: 2
     name: "Locating"
     desc: "定位影响"
     steps:
-      - "2.1 加载 Domain 概要"
-      - "2.2 判断需求涉及哪些 Domain"
-      - "2.3 如果涉及多 Domain，说明跨域影响"
-      - "2.4 加载相关 Domain 的现有 Feature 列表"
-      - "2.5 判断是新增 Feature 还是修改现有 Feature"
+      - "2.1 判断需求涉及哪些 Domain (基于 Phase 1 已加载的 product.yaml)"
+      - "2.2 如果涉及多 Domain，说明跨域影响"
+      - "2.3 加载相关 Domain 的现有 Feature 列表"
+      - "2.4 判断是新增 Feature 还是修改现有 Feature"
     confirmation_required: false
     context_loaded:
-      - "product.yaml (domains)"
       - "feat_*.yaml (按需加载相关 Domain 的 Features)"
 
   - phase: 3
