--- a/.specgraph/components/comp_cli_init.yaml
+++ b/.specgraph/components/comp_cli_init.yaml
@@ -101,12 +101,14 @@ design:
 
       After user confirms understanding:
 
-      1. Load Domain overview:
-         ! uv run devspec context locating
+      1. Based on the product.yaml already loaded in Phase 1 (contains domains), identify which Domain(s) are affected.
 
-      2. Identify which Domain(s) are affected.
+      2. If cross-domain impact, explain the dependencies.
 
-      3. Determine if this is:
+      3. Load Features for affected Domain(s):
+         ! uv run devspec context locating --domain <domain_id>
+
+      4. Determine if this is:
          - A new Feature (requires Exhaustiveness Check)
          - Modification to existing Feature
          - Code-only change (skip Spec updates)
@@ -175,11 +177,13 @@ design:
 
       After user confirms understanding:
 
-      1. Load Domain overview by running: `uv run devspec context locating`
+      1. Based on the product.yaml already loaded in Phase 1 (contains domains), identify which Domain(s) are affected.
 
-      2. Identify which Domain(s) are affected.
+      2. If cross-domain impact, explain the dependencies.
 
-      3. Determine if this is:
+      3. Load Features for affected Domain(s) by running: `uv run devspec context locating --domain <domain_id>`
+
+      4. Determine if this is:
          - A new Feature (requires Exhaustiveness Check)
          - Modification to existing Feature
          - Code-only change (skip Spec updates)
